--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,15 +39,15 @@ file.reference.commons-codec-1.12.jar=src/lib/POI/commons-codec-1.12.jar
 file.reference.commons-collections4-4.3.jar=src/lib/POI/commons-collections4-4.3.jar
 file.reference.itextpdf-5.5.12.jar=src/lib/itextpdf-5.5.12.jar
 file.reference.LGoodDatePicker-10.4.1.jar=src/lib/LGoodDatePicker-10.4.1.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=src/lib/mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-j-8.0.31.jar=src/lib/mysql-connector-j-8.0.31.jar
 file.reference.poi-4.1.0.jar=src/lib/POI/poi-4.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.LGoodDatePicker-10.4.1.jar}:\
     ${file.reference.itextpdf-5.5.12.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.commons-codec-1.12.jar}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar}:\
     ${file.reference.commons-collections4-4.3.jar}:\
     ${file.reference.poi-4.1.0.jar}
 # Space-separated list of extra javac options
