--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,15 +36,21 @@ dist.jlink.output=${dist.jlink.dir}/NgoiNhaCafe
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.1.1.jar=D:\\_Development\\Java\\NgoiNhaCafe\\src\\libs\\flatlaf-3.1.1.jar
+file.reference.flatlaf-3.1.jar=src\\libs\\flatlaf-3.1.jar
 file.reference.jcalendar-1.3.3.jar=D:\\_Development\\Java\\NgoiNhaCafe\\src\\libs\\jcalendar-1.3.3.jar
+file.reference.jcalendar-1.3.3.jar-1=src\\libs\\jcalendar-1.3.3.jar
 file.reference.mysql-connector-java-5.1.48-bin.jar=D:\\_Development\\Java\\NgoiNhaCafe\\src\\libs\\mysql-connector-java-5.1.48-bin.jar
+file.reference.mysql-connector-java-5.1.48-bin.jar-1=src\\libs\\mysql-connector-java-5.1.48-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.flatlaf-3.1.1.jar}:\
     ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.flatlaf-3.1.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.48-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
